@@ -1,6 +1,5 @@
 package processo_seletivo.backend.service;
 
-import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,9 +9,11 @@ import processo_seletivo.backend.dto.request.ItemPedidoRequest;
 import processo_seletivo.backend.dto.request.PedidoRequest;
 import processo_seletivo.backend.dto.response.ItemPedidoResponse;
 import processo_seletivo.backend.dto.response.PedidoResponse;
+import processo_seletivo.backend.exception.PedidoNaoEncontradoException;
 import processo_seletivo.backend.exception.ProdutoNaoEncontradoException;
 import processo_seletivo.backend.messaging.PedidoPublisher;
 import processo_seletivo.backend.model.*;
+import processo_seletivo.backend.repository.BuscaPedidoRepository;
 import processo_seletivo.backend.repository.PedidoRepository;
 import processo_seletivo.backend.repository.ProdutoRepository;
 
@@ -20,7 +21,6 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,6 +29,7 @@ public class PedidoService {
     private final PedidoRepository pedidoRepository;
     private final ProdutoRepository produtoRepository;
     private final PedidoPublisher pedidoPublisher;
+    private final BuscaPedidoRepository buscaPedidoRepository;
 
     @Transactional
     public PedidoResponse criarPedido(PedidoRequest request) {
@@ -40,15 +41,22 @@ public class PedidoService {
         pedido.setDataCriacao(LocalDateTime.now());
         pedido.setEndereco(toEndereco(request.getEnderecoEntrega()));
 
-        List<ItemPedido> itens = montarItens(request.getItens(), pedido);
+        List<ItemPedido> itens = montarItens(
+                request.getItens(),
+                pedido
+        );
+
         pedido.setItens(itens);
 
         BigDecimal valorTotal = itens.stream()
                 .map(ItemPedido::getSubtotal)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
+
         pedido.setValorTotal(valorTotal);
 
         Pedido pedidoSalvo = pedidoRepository.save(pedido);
+
+        indexarPedido(pedidoSalvo);
 
         publicarParaEntrega(pedidoSalvo, request.getEnderecoEntrega());
 
@@ -59,28 +67,63 @@ public class PedidoService {
         return pedidoRepository.findAll()
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private List<ItemPedido> montarItens(List<ItemPedidoRequest> itensRequest, Pedido pedido) {
+    public PedidoResponse findById(UUID idPedido) {
+        Pedido pedido = pedidoRepository.findById(idPedido)
+                .orElseThrow(() ->
+                        new PedidoNaoEncontradoException(idPedido)
+                );
+        return toResponse(pedido);
+    }
+
+    private List<ItemPedido> montarItens(
+            List<ItemPedidoRequest> itensRequest,
+            Pedido pedido
+    ) {
+
         return itensRequest.stream()
                 .map(itemRequest -> {
-                    Produto produto = produtoRepository.findById(itemRequest.getIdProduto())
-                            .orElseThrow(() -> new ProdutoNaoEncontradoException(itemRequest.getIdProduto()));
+
+                    Produto produto = produtoRepository
+                            .findById(itemRequest.getIdProduto())
+                            .orElseThrow(() ->
+                                    new ProdutoNaoEncontradoException(itemRequest.getIdProduto())
+                            );
 
                     BigDecimal valorUnitario = produto.getValorProduto();
-                    BigDecimal subtotal = valorUnitario.multiply(BigDecimal.valueOf(itemRequest.getQtdProduto()));
+
+                    BigDecimal subtotal = valorUnitario.multiply(
+                            BigDecimal.valueOf(itemRequest.getQtdProduto())
+                    );
 
                     ItemPedido item = new ItemPedido();
+
                     item.setIdItemPedido(UUID.randomUUID());
                     item.setPedido(pedido);
                     item.setProduto(produto);
                     item.setQtdProduto(itemRequest.getQtdProduto());
                     item.setValorUnitario(valorUnitario);
                     item.setSubtotal(subtotal);
-                    return item;
-                })
-                .collect(Collectors.toList());
+
+                    return item;})
+                .toList();
+    }
+
+    private void indexarPedido(Pedido pedido) {
+
+        DocumentoPedido document = DocumentoPedido.builder()
+                .idPedido(pedido.getIdPedido())
+                .idCliente(pedido.getIdCliente())
+                .itens(toItensResponse(pedido.getItens()))
+                .valorTotal(pedido.getValorTotal())
+                .status(pedido.getStatus())
+                .dataCriacao(pedido.getDataCriacao())
+                .enderecoEntrega(toEnderecoDTO(pedido.getEndereco()))
+                .build();
+
+        buscaPedidoRepository.save(document);
     }
 
     private void publicarParaEntrega(Pedido pedido, EnderecoDTO enderecoEntrega) {
@@ -99,8 +142,7 @@ public class PedidoService {
                 dto.getCep(),
                 dto.getCidade(),
                 dto.getEstado(),
-                dto.getComplemento()
-        );
+                dto.getComplemento());
     }
 
     private EnderecoDTO toEnderecoDTO(Endereco endereco) {
@@ -115,21 +157,24 @@ public class PedidoService {
                 .build();
     }
 
-    private PedidoResponse toResponse(Pedido pedido) {
-        List<ItemPedidoResponse> itensResponse = pedido.getItens().stream()
-                .map(item -> ItemPedidoResponse.builder()
-                        .idProduto(item.getProduto().getIdProduto())
-                        .nomeProduto(item.getProduto().getNomeProduto())
-                        .qtdProduto(item.getQtdProduto())
-                        .valorUnitario(item.getValorUnitario())
-                        .subtotal(item.getSubtotal())
-                        .build())
-                .collect(Collectors.toList());
+    private List<ItemPedidoResponse> toItensResponse(List<ItemPedido> itens) {
+        return itens.stream()
+                .map(item ->
+                        ItemPedidoResponse.builder()
+                                .idProduto(item.getProduto().getIdProduto())
+                                .nomeProduto(item.getProduto().getNomeProduto())
+                                .qtdProduto(item.getQtdProduto())
+                                .valorUnitario(item.getValorUnitario())
+                                .subtotal(item.getSubtotal())
+                                .build())
+                .toList();
+    }
 
+    private PedidoResponse toResponse(Pedido pedido) {
         return PedidoResponse.builder()
                 .idPedido(pedido.getIdPedido())
                 .idCliente(pedido.getIdCliente())
-                .itens(itensResponse)
+                .itens(toItensResponse(pedido.getItens()))
                 .valorTotal(pedido.getValorTotal())
                 .status(pedido.getStatus())
                 .dataCriacao(pedido.getDataCriacao())
